# Labba3_3semestr

./: README.md
C++/: Array.cpp  Array.h  ArraySerialize.cpp  ArraySerialize.h  CBT.cpp  CBT.h  CBTSerialize.cpp  CBTSerialize.h  CMakeLists.txt  DoublyList.cpp  DoublyList.h  DoublyListSerialize.cpp  DoublyListSerialize.h  Hash.cpp  Hash.h  HashSerialize.cpp  HashSerialize.h  Queue.cpp  Queue.h  QueueSerialize.cpp  QueueSerialize.h  Serialize.cpp  Serialize.h  SinglyList.cpp  SinglyList.h  SinglyListSerialize.cpp  SinglyListSerialize.h  Stack.cpp  Stack.h  StackSerialize.cpp  StackSerialize.h  bench.cpp  main.cpp
C++/tests/: ArrayTest.cpp  CBTTest.cpp  CMakeLists.txt  DoublyListTest.cpp  HashTest.cpp  QueueTest.cpp  SerializationTest.cpp  SinglyListTest.cpp  StackTest.cpp
LR_3_Go/: coverage.html  coverage.out  go.mod  main.go
LR_3_Go/structures/: array.go  array_test.go  dlist.go  dlist_test.go  hash.go  list.go  list_test.go  queue.go  queue_test.go  serialize.go  serialize_test.go  stack.go  stack_test.go  structures_test.go  tree.go  tree_test.go
LR_3_Go/test/: benchmark_test.go  serialization_test.go
